--- a/pages/archive.page
+++ b/pages/archive.page
@@ -37,8 +37,8 @@
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic">
 	
 	<!-- CSS -->
-	<link rel="stylesheet" href="<txp:site_url />stylesheets/foundation.min.css">
-	<link rel="stylesheet" href="<txp:site_url />stylesheets/site.css">
+	<link rel="stylesheet" href="<txp:site_url />style/foundation.min.css">
+	<link rel="stylesheet" href="<txp:site_url />style/site.css">
 
 	<!-- Favicons -->
 	<link rel="shortcut icon" href="/favicon.ico" />
@@ -47,7 +47,7 @@
 	<link rel="icon" type="image/png" href="/images/site/favicon.png" />
 	
 	<!-- JS -->
-	<script src="<txp:site_url />javascripts/modernizr.foundation.js"></script>
+	<script src="<txp:site_url />js/modernizr.foundation.js"></script>
 	
 	<!-- Feeds -->
 	<txp:feed_link flavor="atom" format="link" label="Atom" />
@@ -118,9 +118,9 @@
 </div><!-- end footer -->
 
 <!-- JS -->
-<script src="<txp:site_url />javascripts/jquery.js"></script>
-<script src="<txp:site_url />javascripts/foundation.min.js"></script>
-<script src="<txp:site_url />javascripts/app.js"></script>
+<script src="<txp:site_url />js/jquery.js"></script>
+<script src="<txp:site_url />js/foundation.min.js"></script>
+<script src="<txp:site_url />js/app.js"></script>
 
 </body>
 </html>
