--- a/pages/archive.page
+++ b/pages/archive.page
@@ -31,9 +31,10 @@
 	<txp:feed_link flavor="atom" format="link" label="Atom" />
 	<txp:feed_link flavor="rss" format="link" label="RSS" />
 	
-	<!-- IE Fix for HTML5 Tags -->
+	<!-- HTML5/Media Queries support for IE < 9 -->
 	<!--[if lt IE 9]>
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="<txp:site_url />js/html5shiv.js"></script>
+		<script src="<txp:site_url />js/css3-mediaqueries.js"></script>
 	<![endif]-->
 	
 	<!-- Canonical -->
