--- a/pages/error_default.page
+++ b/pages/error_default.page
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-  
+
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
 	<title><txp:page_title /></title>
 	<!-- Set the viewport width to device width for mobile -->
-	<meta name="viewport" content="width=device-width" />
-	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width">
 	<meta name="generator" content="Textpattern CMS">
 	<meta name="robots" content="none">
 
@@ -36,7 +34,7 @@
 </head>
 
 <body>
-	
+
 <div id="masthead">
 	<div class="row">
 		<div class="six columns centered">
