--- a/pages/archive.page
+++ b/pages/archive.page
@@ -67,7 +67,7 @@
 	</div><!-- end row -->
 </div><!-- end primary -->
 
-<div id="footer">
+<footer>
 	<div class="row">
 		<div class="six columns centered">
 			<div id="about">
@@ -81,7 +81,7 @@
 			</div><!-- end about -->
 		</div><!-- end six columns -->
 	</div><!-- end row -->
-</div><!-- end footer -->
+</footer>
 
 <!-- JS -->
 <script src="<txp:site_url />js/jquery.js"></script>
