--- a/pages/error_default.page
+++ b/pages/error_default.page
@@ -54,7 +54,7 @@
 	</div><!-- end row -->
 </div><!-- end primary -->
 
-<div id="footer">
+<footer>
 	<div class="row">
 		<div class="six columns centered">
 			<div id="about">
@@ -68,7 +68,7 @@
 			</div><!-- end about -->
 		</div><!-- end six columns -->
 	</div><!-- end row -->
-</div><!-- end footer -->
+</footer>
 
 <!-- JS -->
 <script src="<txp:site_url />js/jquery.js"></script>
