Use <header> tag

--- a/pages/archive.page
+++ b/pages/archive.page
@@ -42,7 +42,7 @@
 
 <body>
 
-<div id="masthead">
+<header>
 	<div class="row">
 		<div class="six columns centered">
 			<div id="pagetop">
@@ -50,7 +50,7 @@
 			</div>
 		</div><!-- end six columns -->
 	</div><!-- end row -->
-</div><!-- end masthead -->
+</header>
 
 <div id="primary">
 	<div class="row">
