--- a/pages/error_default.page
+++ b/pages/error_default.page
@@ -35,7 +35,7 @@
 
 <body>
 
-<div id="masthead">
+<header>
 	<div class="row">
 		<div class="six columns centered">
 			<div id="pagetop">
@@ -43,7 +43,7 @@
 			</div>
 		</div><!-- end six columns -->
 	</div><!-- end row -->
-</div><!-- end masthead -->
+</header>
 
 <div id="primary">
 	<div class="row">
