--- a/style/site.css
+++ b/style/site.css
@@ -38,7 +38,7 @@ p {
 	font-weight: normal;
 }
 
-#masthead h1 {
+header h1 {
 	text-align: center;
 	font-size: 66px;
 	font-family: Georgia, serif;
@@ -131,11 +131,11 @@ a:hover {
 	transition: color .2s linear;
 }
 
-#masthead h1 a {
+header h1 a {
 	color: #f10000;
 }
 
-#masthead h1 a:hover {
+header h1 a:hover {
 	color: #000;
 	border-bottom: none;
 	-webkit-transition: color .2s linear;
