Add aria roles to header/footer

--- a/pages/archive.page
+++ b/pages/archive.page
@@ -42,7 +42,7 @@
 
 <body>
 
-<header class="row">
+<header role="banner" class="row">
 	<div class="six columns centered">
 		<div id="pagetop">
 			<h1><a href="<txp:site_url />" rel="home"><txp:site_name /></a></h1>
@@ -65,7 +65,7 @@
 	</div><!-- end row -->
 </div><!-- end primary -->
 
-<footer class="row">
+<footer role="contentinfo" class="row">
 	<div class="six columns centered">
 		<div id="about">
 			<ul class="social">
